<resources>
    <string name="app_name">"TaskiMatti "</string>
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_routines">Routines</string>
    <string name="action_sign_out">Sign out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
...
    <string name="time_hours">Hours</string>
    <string name="time_Minutes">Minutes</string>
    <string name="param_task">Task</string>
    <string name="error_less_than">Value less than</string>
    <string name="error_under_zero">Value less than zero</string>
    <string name="param_name">Name</string>
    <string name="param_type">Type</string>
    <string name="param_repeat">Repeat</string>
    <string name="param_frequency">Frequency</string>
    <string name="text_all_tasks_are_same">All of the tasks are the same</string>
    <string name="text_tasks_created">Tasks created</string>
    <string name="text_routine_created">Routine created successfully!</string>
    <string name="param_duration">Duration</string>
    <string name="param_description">Description</string>
    <string name="title_create_tasks">Create tasks</string>

    <!-- ShowRoutinesActivity -->
    <string name="action_save_changes">Save changes</string>
    <string name="action_delete">Delete</string>
    <string name="prompt_routine_removal">Routine removal</string>
    <string name="prompt_routine_removal_success">Routine removed</string>
    <string name="prompt_routine_removal_confirm">Are you sure you want to remove the routine?</string>
    <string name="prompt_routine_edit">Edit routine</string>
    <string name="prompt_routine_edit_confirm">Do you want to save the changes?</string>
    <string name="prompt_routine_edit_success">Changes saved</string>
    <string name="text_all">All</string>
    <string name="text_remove">Remove</string>
    <string name="text_no_routines">No routines yet…\nStart by creating one!</string>

    <!-- Main activity -->
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
...
