...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:elevation="5dp">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSaveRoutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:foregroundGravity="bottom|right"
        android:layout_margin="16dp"
        android:clickable="true"
...
