...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_show_routines" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/primaryColor"
        app:srcCompat="@drawable/ic_add_black_24dp" />
...
